# adi_gpu_opengl

./: Cargo.toml  README.md  changelog.md  readme.md
src/: lib.rs
src/shaders/: complex-frag.glsl  complex-vert.glsl  faded-vert.glsl  gradient-frag.glsl  gradient-vert.glsl  solid-frag.glsl  solid-vert.glsl  texture-frag.glsl  texture-vert.glsl  tinted-frag.glsl  vg-frag.glsl  vg-vert.glsl
